--- a/assets/themes/hoiandor/about.pug
+++ b/assets/themes/hoiandor/about.pug
@@ -8,14 +8,8 @@ html(lang="en")
     //  Fav Icon 
     link(rel="icon", href="assets/images/favicon.ico", type="image/x-icon")
     //  Google Fonts 
-    link(
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-      rel="stylesheet"
-    )
-    link(
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-      rel="stylesheet"
-    )
+    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
     //  Stylesheets 
     link(href="assets/css/font-awesome-all.css", rel="stylesheet")
     link(href="assets/css/flaticon.css", rel="stylesheet")
@@ -40,23 +34,29 @@ html(lang="en")
               .spinner
               .txt-loading
                 span.letters-loading(data-text-preloader="t").
+                  
                   t
-
+                  
                 span.letters-loading(data-text-preloader="r").
+                  
                   r
-
+                  
                 span.letters-loading(data-text-preloader="a").
+                  
                   a
-
+                  
                 span.letters-loading(data-text-preloader="v").
+                  
                   v
-
+                  
                 span.letters-loading(data-text-preloader="i").
+                  
                   i
-
+                  
                 span.letters-loading(data-text-preloader="o").
+                  
                   o
-
+                  
       //  preloader end 
       //  main header 
       header.main-header.style-three
@@ -74,7 +74,7 @@ html(lang="en")
                 i.icon-bar
                 i.icon-bar
               nav.main-menu.navbar-expand-md.navbar-light
-                #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
+                .collapse.navbar-collapse.show.clearfix#navbarSupportedContent
                   ul.navigation.clearfix
                     li.dropdown
                       a(href="index.html") Home
@@ -201,7 +201,7 @@ html(lang="en")
             ul.menu-right-content.pull-right.clearfix
               li.search-box-outer
                 .dropdown
-                  button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                  button.search-box-btn#dropdownMenu3(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                     i.far.fa-search
                   .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
                     .form-container
@@ -229,7 +229,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button.search-box-btn#dropdownMenu4(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
                       .form-container
@@ -280,7 +280,7 @@ html(lang="en")
                   span.fab.fa-youtube
       //  End Mobile Menu 
       //  Page Title 
-      section.page-title.centred(style="background-image: url(assets/images/background/page-title.jpg)")
+      section.page-title.centred(style="background-image: url(assets/images/background/page-title.jpg);")
         .auto-container
           .content-box
             h1 About Us
@@ -288,7 +288,7 @@ html(lang="en")
       //  End Page Title 
       //  about-style-two 
       section.about-style-two
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-2.png)")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-2.png);")
         .auto-container
           .row.clearfix
             .col-lg-6.col-md-12.col-sm-12.content-column
@@ -305,17 +305,17 @@ html(lang="en")
               .image_block_2
                 .image-box
                   .shape
-                    .shape-1(style="background-image: url(assets/images/shape/shape-13.png)")
-                    .shape-2(style="background-image: url(assets/images/shape/shape-12.png)")
-                    .shape-3(style="background-image: url(assets/images/shape/shape-12.png)")
+                    .shape-1(style="background-image: url(assets/images/shape/shape-13.png);")
+                    .shape-2(style="background-image: url(assets/images/shape/shape-12.png);")
+                    .shape-3(style="background-image: url(assets/images/shape/shape-12.png);")
                   figure.image
                     img(src="assets/images/resource/about-3.jpg", alt)
       //  about-style-two end 
       //  place-style-three 
       section.place-style-three.bg-color-1.sec-pad
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-18.png)")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png)")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-18.png);")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png);")
         .auto-container
           .sec-title.centred
             p Choose Your place
@@ -378,7 +378,7 @@ html(lang="en")
                     h3 Norway Lake
       //  place-style-three end 
       //  video-section 
-      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg)")
+      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg);")
         .auto-container
           .inner-box
             h2 Explore Your Travel
@@ -411,7 +411,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -432,7 +432,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -453,7 +453,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -474,7 +474,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -495,7 +495,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -516,7 +516,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -537,7 +537,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -558,7 +558,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -579,7 +579,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -590,8 +590,8 @@ html(lang="en")
       //  team-section 
       section.team-section.sec-pad.bg-color-1.centred
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png)")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png)")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png);")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png);")
         .auto-container
           .sec-title
             p Tour Guide
@@ -658,7 +658,7 @@ html(lang="en")
       //  main-footer 
       footer.main-footer.bg-color-2
         .footer-top.pt-130
-          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png)")
+          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png);")
           .auto-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.footer-column
@@ -753,8 +753,7 @@ html(lang="en")
               .copyright.pull-left
                 p
                   a(href="index.html") Travio
-                  |
-                  | © 2021 All Right Reserved
+                  |  © 2021 All Right Reserved
               ul.footer-nav.pull-right
                 li
                   a(href="index.html") Terms of Service
