--- a/assets/themes/hoiandor/tour-deals.pug
+++ b/assets/themes/hoiandor/tour-deals.pug
@@ -8,8 +8,14 @@ html(lang="en")
     //  Fav Icon 
     link(rel="icon", href="assets/images/favicon.ico", type="image/x-icon")
     //  Google Fonts 
-    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
+    link(
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
+    link(
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
     //  Stylesheets 
     link(href="assets/css/font-awesome-all.css", rel="stylesheet")
     link(href="assets/css/flaticon.css", rel="stylesheet")
@@ -34,29 +40,17 @@ html(lang="en")
               .spinner
               .txt-loading
                 span.letters-loading(data-text-preloader="t").
-                  
                   t
-                  
                 span.letters-loading(data-text-preloader="r").
-                  
                   r
-                  
                 span.letters-loading(data-text-preloader="a").
-                  
                   a
-                  
                 span.letters-loading(data-text-preloader="v").
-                  
                   v
-                  
                 span.letters-loading(data-text-preloader="i").
-                  
                   i
-                  
                 span.letters-loading(data-text-preloader="o").
-                  
                   o
-                  
       //  preloader end 
       //  main header 
       header.main-header.style-three
@@ -74,7 +68,7 @@ html(lang="en")
                 i.icon-bar
                 i.icon-bar
               nav.main-menu.navbar-expand-md.navbar-light
-                .collapse.navbar-collapse.show.clearfix#navbarSupportedContent
+                #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
                   ul.navigation.clearfix
                     li.dropdown
                       a(href="index.html") Home
@@ -201,7 +195,7 @@ html(lang="en")
             ul.menu-right-content.pull-right.clearfix
               li.search-box-outer
                 .dropdown
-                  button.search-box-btn#dropdownMenu3(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                  button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                     i.far.fa-search
                   .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
                     .form-container
@@ -229,7 +223,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu4(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
                       .form-container
@@ -280,7 +274,7 @@ html(lang="en")
                   span.fab.fa-youtube
       //  End Mobile Menu 
       //  Page Title 
-      section.page-title.centred(style="background-image: url(assets/images/background/page-title-2.jpg);")
+      section.page-title.centred(style="background-image: url(assets/images/background/page-title-2.jpg)")
         .auto-container
           .content-box
             h1 Tour Deals
@@ -356,12 +350,12 @@ html(lang="en")
       //  offer-section end 
       //  map-section 
       section.map-section.bg-color-1
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-9.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-9.png)")
         .outer-container
           .sec-title.centred
             p Modern & Beautiful
             h2 Explore the World for Travel
-          .map-inner(style="background-image: url(assets/images/shape/map-1.png);")
+          .map-inner(style="background-image: url(assets/images/shape/map-1.png)")
             .map-content.clearfix
               .single-location-box
                 figure.map-marker
@@ -395,15 +389,15 @@ html(lang="en")
       //  funfact-section 
       section.funfact-section.centred
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png)")
         .auto-container
           .inner-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-5.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-5.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="2000") 0
                       span +
@@ -411,7 +405,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-6.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-6.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="70") 0
                       span +
@@ -419,7 +413,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-7.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-7.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="1200") 0
                       span +
@@ -427,7 +421,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-8.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-8.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="15") 0
                       p Years in Service
@@ -453,7 +447,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -474,7 +468,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -495,7 +489,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -516,7 +510,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -537,7 +531,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -558,7 +552,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -579,7 +573,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -600,7 +594,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -621,7 +615,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -632,7 +626,7 @@ html(lang="en")
       //  main-footer 
       footer.main-footer.bg-color-2
         .footer-top.pt-130
-          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png);")
+          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png)")
           .auto-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.footer-column
@@ -727,7 +721,8 @@ html(lang="en")
               .copyright.pull-left
                 p
                   a(href="index.html") Travio
-                  |  © 2021 All Right Reserved
+                  |
+                  | © 2021 All Right Reserved
               ul.footer-nav.pull-right
                 li
                   a(href="index.html") Terms of Service
@@ -756,4 +751,4 @@ html(lang="en")
     script(src="assets/js/map-helper.js")
     //  main-js 
     script(src="assets/js/script.js")
-  //  End of .page_wrapper 
+  //  End of .page_wrapper 
