--- a/assets/themes/hoiandor/index-3.pug
+++ b/assets/themes/hoiandor/index-3.pug
@@ -8,8 +8,14 @@ html(lang="en")
     //  Fav Icon 
     link(rel="icon", href="assets/images/favicon.ico", type="image/x-icon")
     //  Google Fonts 
-    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
+    link(
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
+    link(
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
     //  Stylesheets 
     link(href="assets/css/font-awesome-all.css", rel="stylesheet")
     link(href="assets/css/flaticon.css", rel="stylesheet")
@@ -34,29 +40,17 @@ html(lang="en")
               .spinner
               .txt-loading
                 span.letters-loading(data-text-preloader="t").
-                  
                   t
-                  
                 span.letters-loading(data-text-preloader="r").
-                  
                   r
-                  
                 span.letters-loading(data-text-preloader="a").
-                  
                   a
-                  
                 span.letters-loading(data-text-preloader="v").
-                  
                   v
-                  
                 span.letters-loading(data-text-preloader="i").
-                  
                   i
-                  
                 span.letters-loading(data-text-preloader="o").
-                  
                   o
-                  
       //  preloader end 
       //  main header 
       header.main-header.style-three
@@ -74,7 +68,7 @@ html(lang="en")
                 i.icon-bar
                 i.icon-bar
               nav.main-menu.navbar-expand-md.navbar-light
-                .collapse.navbar-collapse.show.clearfix#navbarSupportedContent
+                #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
                   ul.navigation.clearfix
                     li.current.dropdown
                       a(href="index.html") Home
@@ -201,7 +195,7 @@ html(lang="en")
             ul.menu-right-content.pull-right.clearfix
               li.search-box-outer
                 .dropdown
-                  button.search-box-btn#dropdownMenu3(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                  button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                     i.far.fa-search
                   .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
                     .form-container
@@ -229,7 +223,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu4(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
                       .form-container
@@ -281,22 +275,22 @@ html(lang="en")
       //  End Mobile Menu 
       //  banner-section 
       section.banner-section.style-three.bg-color-1
-        .pattern-layer-2(style="background-image: url(assets/images/shape/shape-19.png);")
+        .pattern-layer-2(style="background-image: url(assets/images/shape/shape-19.png)")
         .banner-carousel.owl-theme.owl-carousel.owl-dots-none
           .slide-item
-            .image-layer(style="background-image:url(assets/images/banner/banner-3.jpg)")
+            .image-layer(style="background-image: url(assets/images/banner/banner-3.jpg)")
             .auto-container
               .text
                 h2 Find Your Destination
                 p Discover your next great adventure
           .slide-item
-            .image-layer(style="background-image:url(assets/images/banner/banner-4.jpg)")
+            .image-layer(style="background-image: url(assets/images/banner/banner-4.jpg)")
             .auto-container
               .text
                 h2 Find Your Destination
                 p Discover your next great adventure
           .slide-item
-            .image-layer(style="background-image:url(assets/images/banner/banner-5.jpg)")
+            .image-layer(style="background-image: url(assets/images/banner/banner-5.jpg)")
             .auto-container
               .text
                 h2 Find Your Destination
@@ -325,9 +319,9 @@ html(lang="en")
       //  feature-section 
       section.feature-section.centred.bg-color-1.sec-pad
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-15.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-16.png);")
-          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-17.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-15.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-16.png)")
+          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-17.png)")
         .auto-container
           .sec-title.centred
             p Travio Specials
@@ -372,11 +366,11 @@ html(lang="en")
       //  feature-section end 
       //  about-style-three 
       section.about-style-three
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png)")
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-2.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png);")
-          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-18.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-2.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png)")
+          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-18.png)")
         .auto-container
           .row.clearfix
             .col-lg-6.col-md-6.col-sm-12.content-column
@@ -403,7 +397,7 @@ html(lang="en")
                     img(src="assets/images/resource/about-5.jpg", alt)
       //  about-style-three end 
       //  offer-section 
-      section.offer-section.sec-pad(style="background-image: url(assets/images/background/offer-1.jpg);")
+      section.offer-section.sec-pad(style="background-image: url(assets/images/background/offer-1.jpg)")
         .auto-container
           .sec-title.light
             p Deals & Offers
@@ -514,7 +508,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     p Lorem ipsum dolor amet consectetur adipiscing sed.
                     .btn-box
                       a(href="tour-details.html") See Details
@@ -534,7 +528,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     p Lorem ipsum dolor amet consectetur adipiscing sed.
                     .btn-box
                       a(href="tour-details.html") See Details
@@ -554,7 +548,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     p Lorem ipsum dolor amet consectetur adipiscing sed.
                     .btn-box
                       a(href="tour-details.html") See Details
@@ -574,7 +568,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     p Lorem ipsum dolor amet consectetur adipiscing sed.
                     .btn-box
                       a(href="tour-details.html") See Details
@@ -582,8 +576,8 @@ html(lang="en")
       //  place-style-three 
       section.place-style-three.bg-color-1.sec-pad
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-18.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-18.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png)")
         .auto-container
           .sec-title.centred
             p Choose Your place
@@ -646,7 +640,7 @@ html(lang="en")
                     h3 Norway Lake
       //  place-style-three end 
       //  video-section 
-      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg);")
+      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg)")
         .auto-container
           .inner-box
             h2 Explore Your Travel
@@ -660,7 +654,7 @@ html(lang="en")
       //  video-section end 
       //  funfact-style-two 
       section.funfact-style-two.centred
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-14.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-14.png)")
         .auto-container
           .row.clearfix
             .col-lg-3.col-md-6.col-sm-12.counter-block
@@ -716,7 +710,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -739,7 +733,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -762,7 +756,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -772,7 +766,7 @@ html(lang="en")
       //  main-footer 
       footer.main-footer.bg-color-2
         .footer-top.pt-130
-          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png);")
+          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png)")
           .auto-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.footer-column
@@ -867,7 +861,8 @@ html(lang="en")
               .copyright.pull-left
                 p
                   a(href="index.html") Travio
-                  |  © 2021 All Right Reserved
+                  |
+                  | © 2021 All Right Reserved
               ul.footer-nav.pull-right
                 li
                   a(href="index.html") Terms of Service
@@ -891,4 +886,4 @@ html(lang="en")
     script(src="assets/js/jquery-ui.js")
     //  main-js 
     script(src="assets/js/script.js")
-  //  End of .page_wrapper 
+  //  End of .page_wrapper 
