--- a/assets/themes/hoiandor/index-4.pug
+++ b/assets/themes/hoiandor/index-4.pug
@@ -8,8 +8,14 @@ html(lang="en")
     //  Fav Icon 
     link(rel="icon", href="assets/images/favicon.ico", type="image/x-icon")
     //  Google Fonts 
-    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
+    link(
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
+    link(
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
     //  Stylesheets 
     link(href="assets/css/font-awesome-all.css", rel="stylesheet")
     link(href="assets/css/flaticon.css", rel="stylesheet")
@@ -34,29 +40,17 @@ html(lang="en")
               .spinner
               .txt-loading
                 span.letters-loading(data-text-preloader="t").
-                  
                   t
-                  
                 span.letters-loading(data-text-preloader="r").
-                  
                   r
-                  
                 span.letters-loading(data-text-preloader="a").
-                  
                   a
-                  
                 span.letters-loading(data-text-preloader="v").
-                  
                   v
-                  
                 span.letters-loading(data-text-preloader="i").
-                  
                   i
-                  
                 span.letters-loading(data-text-preloader="o").
-                  
                   o
-                  
       //  preloader end 
       //  main header 
       header.main-header.style-one.style-four
@@ -75,7 +69,7 @@ html(lang="en")
                   i.icon-bar
                   i.icon-bar
                 nav.main-menu.navbar-expand-md.navbar-light
-                  .collapse.navbar-collapse.show.clearfix#navbarSupportedContent
+                  #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
                     ul.navigation.clearfix
                       li.current.dropdown
                         a(href="index.html") Home
@@ -202,7 +196,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu3(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
                       .form-container
@@ -228,7 +222,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu4(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
                       .form-container
@@ -279,8 +273,8 @@ html(lang="en")
                   span.fab.fa-youtube
       //  End Mobile Menu 
       //  banner-section 
-      section.banner-section.style-four(style="background-image: url(assets/images/banner/banner-6.jpg);")
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-20.png);")
+      section.banner-section.style-four(style="background-image: url(assets/images/banner/banner-6.jpg)")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-20.png)")
         .auto-container
           .content-box
             .text.centred
@@ -311,9 +305,9 @@ html(lang="en")
       //  about-style-three 
       section.about-style-three.home-4
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-2.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png);")
-          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-18.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-2.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-18.png)")
+          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-18.png)")
         .auto-container
           .row.clearfix
             .col-lg-6.col-md-6.col-sm-12.content-column
@@ -341,7 +335,7 @@ html(lang="en")
       //  about-style-three end 
       //  tour-section 
       section.tour-section.bg-color-1.sec-pad
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png)")
         .auto-container
           .sec-title.text-center
             p Modern & Beautiful
@@ -363,7 +357,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -390,7 +384,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -417,7 +411,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -430,7 +424,7 @@ html(lang="en")
                       a(href="tour-details.html") See Details
       //  tour-section end 
       //  deals-style-two 
-      section.deals-style-two.sec-pad(style="background-image: url(assets/images/background/deals-2.jpg);")
+      section.deals-style-two.sec-pad(style="background-image: url(assets/images/background/deals-2.jpg)")
         .auto-container
           .sec-title.centred.light
             p Deals & Offers
@@ -514,7 +508,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -535,7 +529,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -556,7 +550,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -577,7 +571,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -598,7 +592,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -619,7 +613,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -640,7 +634,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -661,7 +655,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -682,7 +676,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -693,9 +687,9 @@ html(lang="en")
       //  place-section 
       section.place-section.sec-pad.bg-color-1
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/icons/anim-icon-1.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png);")
-          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-3.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/icons/anim-icon-1.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png)")
+          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-3.png)")
         .auto-container
           .row.clearfix
             .col-lg-4.col-md-6.col-sm-12.title-column
@@ -769,7 +763,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -792,7 +786,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -815,7 +809,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -824,7 +818,7 @@ html(lang="en")
       //  news-section end 
       //  instagram-section 
       section.instagram-section
-        .bg-layer(style="background-image: url(assets/images/background/instagram-1.jpg);")
+        .bg-layer(style="background-image: url(assets/images/background/instagram-1.jpg)")
         .auto-container
           .row.clearfix
             .col-lg-3.col-md-6.col-sm-12.single-column
@@ -859,7 +853,7 @@ html(lang="en")
       //  main-footer 
       footer.main-footer.bg-color-2
         .footer-top
-          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png);")
+          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png)")
           .auto-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.footer-column
@@ -954,7 +948,8 @@ html(lang="en")
               .copyright.pull-left
                 p
                   a(href="index.html") Travio
-                  |  © 2021 All Right Reserved
+                  |
+                  | © 2021 All Right Reserved
               ul.footer-nav.pull-right
                 li
                   a(href="index.html") Terms of Service
@@ -978,4 +973,4 @@ html(lang="en")
     script(src="assets/js/jquery-ui.js")
     //  main-js 
     script(src="assets/js/script.js")
-  //  End of .page_wrapper 
+  //  End of .page_wrapper 
