--- a/assets/themes/hoiandor/index-rtl.pug
+++ b/assets/themes/hoiandor/index-rtl.pug
@@ -8,8 +8,14 @@ html(lang="en")
     //  Fav Icon 
     link(rel="icon", href="assets/images/favicon.ico", type="image/x-icon")
     //  Google Fonts 
-    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet")
+    link(
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
+    link(
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      rel="stylesheet"
+    )
     //  Stylesheets 
     link(href="assets/css/font-awesome-all.css", rel="stylesheet")
     link(href="assets/css/flaticon.css", rel="stylesheet")
@@ -35,29 +41,17 @@ html(lang="en")
               .spinner
               .txt-loading
                 span.letters-loading(data-text-preloader="t").
-                  
                   t
-                  
                 span.letters-loading(data-text-preloader="r").
-                  
                   r
-                  
                 span.letters-loading(data-text-preloader="a").
-                  
                   a
-                  
                 span.letters-loading(data-text-preloader="v").
-                  
                   v
-                  
                 span.letters-loading(data-text-preloader="i").
-                  
                   i
-                  
                 span.letters-loading(data-text-preloader="o").
-                  
                   o
-                  
       //  preloader end 
       //  main header 
       header.main-header.style-one
@@ -76,7 +70,7 @@ html(lang="en")
                   i.icon-bar
                   i.icon-bar
                 nav.main-menu.navbar-expand-md.navbar-light
-                  .collapse.navbar-collapse.show.clearfix#navbarSupportedContent
+                  #navbarSupportedContent.collapse.navbar-collapse.show.clearfix
                     ul.navigation.clearfix
                       li.current.dropdown
                         a(href="index.html") Home
@@ -203,7 +197,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu3(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu3.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu3")
                       .form-container
@@ -229,7 +223,7 @@ html(lang="en")
               ul.menu-right-content.clearfix
                 li.search-box-outer
                   .dropdown
-                    button.search-box-btn#dropdownMenu4(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+                    button#dropdownMenu4.search-box-btn(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
                       i.far.fa-search
                     .dropdown-menu.search-panel(aria-labelledby="dropdownMenu4")
                       .form-container
@@ -280,8 +274,8 @@ html(lang="en")
                   span.fab.fa-youtube
       //  End Mobile Menu 
       //  banner-section 
-      section.banner-section(style="background-image: url(assets/images/banner/banner-1.jpg);")
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-1.png);")
+      section.banner-section(style="background-image: url(assets/images/banner/banner-1.jpg)")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-1.png)")
         .auto-container
           .content-box
             h2
@@ -355,18 +349,18 @@ html(lang="en")
       //  feature-section end 
       //  about-section 
       section.about-section
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-2.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-2.png)")
         .auto-container
           .row.clearfix
             .col-lg-6.col-md-12.col-sm-12.image-column
               .image_block_1
                 .image-box
                   .shape
-                    .shape-1(style="background-image: url(assets/images/shape/shape-2.png);")
-                    .shape-2(style="background-image: url(assets/images/shape/shape-3.png);")
+                    .shape-1(style="background-image: url(assets/images/shape/shape-2.png)")
+                    .shape-2(style="background-image: url(assets/images/shape/shape-3.png)")
                   figure.image.image-1
                     img(src="assets/images/resource/about-1.jpg", alt)
-                    .shape-3(style="background-image: url(assets/images/shape/shape-3.png);")
+                    .shape-3(style="background-image: url(assets/images/shape/shape-3.png)")
                   figure.image.image-2
                     img(src="assets/images/resource/about-2.jpg", alt)
                   .video-content
@@ -391,7 +385,7 @@ html(lang="en")
       //  about-section end 
       //  tour-section 
       section.tour-section.bg-color-1.sec-pad
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-4.png)")
         .auto-container
           .sec-title.text-center
             p Modern & Beautiful
@@ -413,7 +407,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -440,7 +434,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -467,7 +461,7 @@ html(lang="en")
                       a(href="tour-details.html") Moscow Red City Land
                     h4
                       | $170.00
-                      span  / Per person
+                      span / Per person
                     ul.info.clearfix
                       li
                         i.far.fa-clock
@@ -480,7 +474,7 @@ html(lang="en")
                       a(href="tour-details.html") See Details
       //  tour-section end 
       //  deals-section 
-      section.deals-section(style="background-image: url(assets/images/background/deals-1.jpg);")
+      section.deals-section(style="background-image: url(assets/images/background/deals-1.jpg)")
         .auto-container
           .content_block_2
             .content-box
@@ -497,9 +491,9 @@ html(lang="en")
       //  place-section 
       section.place-section.sec-pad
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/icons/anim-icon-1.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png);")
-          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-3.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/icons/anim-icon-1.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png)")
+          .icon.anim-icon-3(style="background-image: url(assets/images/shape/shape-3.png)")
         .auto-container
           .row.clearfix
             .col-lg-4.col-md-6.col-sm-12.title-column
@@ -550,12 +544,12 @@ html(lang="en")
       //  place-section end 
       //  map-section 
       section.map-section.bg-color-1
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-9.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-9.png)")
         .outer-container
           .sec-title.centred
             p Modern & Beautiful
             h2 Explore the World for Travel
-          .map-inner(style="background-image: url(assets/images/shape/map-1.png);")
+          .map-inner(style="background-image: url(assets/images/shape/map-1.png)")
             .map-content.clearfix
               .single-location-box
                 figure.map-marker
@@ -589,15 +583,15 @@ html(lang="en")
       //  funfact-section 
       section.funfact-section.centred
         .anim-icon
-          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png);")
-          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png);")
+          .icon.anim-icon-1(style="background-image: url(assets/images/shape/shape-3.png)")
+          .icon.anim-icon-2(style="background-image: url(assets/images/shape/shape-3.png)")
         .auto-container
           .inner-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-5.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-5.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="2000") 0
                       span +
@@ -605,7 +599,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-6.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-6.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="70") 0
                       span +
@@ -613,7 +607,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-7.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-7.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="1200") 0
                       span +
@@ -621,7 +615,7 @@ html(lang="en")
               .col-lg-3.col-md-6.col-sm-12.counter-block
                 .counter-block-one
                   .inner-box
-                    .pattern(style="background-image: url(assets/images/shape/shape-8.png);")
+                    .pattern(style="background-image: url(assets/images/shape/shape-8.png)")
                     .count-outer.count-box
                       span.count-text(data-speed="1500", data-stop="15") 0
                       p Years in Service
@@ -647,7 +641,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -668,7 +662,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -689,7 +683,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -710,7 +704,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -731,7 +725,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -752,7 +746,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -773,7 +767,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Mike Hardson
@@ -794,7 +788,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Amy Johnson
@@ -815,7 +809,7 @@ html(lang="en")
                   li
                     i.icon-Star
                 .text
-                  .icon(style="background-image: url(assets/images/icons/quote-1.png);")
+                  .icon(style="background-image: url(assets/images/icons/quote-1.png)")
                   p Lorem ipsum dolor amet consectet adipiscing sed do eiusmod tempor incididunt labore et dolore magna aliqua ipsum suspen disse ultrices gravida Risus
                 .author-box
                   h4 Luaka Smith
@@ -824,7 +818,7 @@ html(lang="en")
                     img(src="assets/images/resource/testimonial-3.png", alt)
       //  testimonial-section end 
       //  video-section 
-      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg);")
+      section.video-section.centred(style="background-image: url(assets/images/background/video-1.jpg)")
         .auto-container
           .inner-box
             h2 Explore Your Travel
@@ -838,7 +832,7 @@ html(lang="en")
       //  video-section end 
       //  news-section 
       section.news-section.sec-pad.pb-220
-        .pattern-layer(style="background-image: url(assets/images/shape/shape-10.png);")
+        .pattern-layer(style="background-image: url(assets/images/shape/shape-10.png)")
         .auto-container
           .sec-title
             p News & Articles
@@ -862,7 +856,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -885,7 +879,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -908,7 +902,7 @@ html(lang="en")
                     ul.post-info.clearfix
                       li
                         span By
-                        |  
+                        |
                         a(href="index.html") Eva Green
                       li - October 13, 2020
                     p Lorem ipsum dolor sit amet consectur adip icing sed do eiusmod tempor incididunt labore dolore magna aliqua enim.
@@ -918,7 +912,7 @@ html(lang="en")
       //  main-footer 
       footer.main-footer.bg-color-2
         .footer-top
-          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png);")
+          .vector-bg(style="background-image: url(assets/images/shape/shape-11.png)")
           .auto-container
             .row.clearfix
               .col-lg-3.col-md-6.col-sm-12.footer-column
@@ -1013,7 +1007,8 @@ html(lang="en")
               .copyright.pull-left
                 p
                   a(href="index.html") Travio
-                  |  © 2021 All Right Reserved
+                  |
+                  | © 2021 All Right Reserved
               ul.footer-nav.pull-right
                 li
                   a(href="index.html") Terms of Service
@@ -1037,4 +1032,4 @@ html(lang="en")
     script(src="assets/js/jquery-ui.js")
     //  main-js 
     script(src="assets/js/script.js")
-  //  End of .page_wrapper 
+  //  End of .page_wrapper 
